--- a/frontend/my-svelte-app/src/app.css
+++ b/frontend/my-svelte-app/src/app.css
@@ -1,8 +1,10 @@
-
 html, body {
   position: relative;
   width: 100%;
   height: 100%;
+}
+html{
+  font-size:10px;
 }
 
 body {
@@ -58,7 +60,7 @@ button,.btn {
   color: var(--button-color);
   padding: 5px;
   font-weight: bold;
-  font-size: 11px;
+  font-size: 1.1rem;
   border-radius: 8px;
   display: flex;
   align-items: center;
@@ -111,7 +113,7 @@ input::file-selector-button {
     color: var(--button-color);
     padding: 5px;
     font-weight: bold;
-    font-size: 11px;
+    font-size: 1.1rem;
     border-radius: 8px;
     align-items: center;
     gap: 5px;
