popup size and fixed bar

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -197,3 +197,9 @@ input::file-selector-button {
   width:55px;
   height:55px;
 }
+
+.workspacepage .checkbox-holder .img-c
+{
+  width:36px;
+  height:36px; 
+}
