--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -62,7 +62,7 @@ body {
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Spec";
+  font: 1em/1.3 "Spec","Helvetica"; 
 }
 
 * {
@@ -202,4 +202,10 @@ input::file-selector-button {
 {
   width:36px;
   height:36px; 
+}
+
+.checkbox-holder .img-c {
+  width:36px;
+  height:36px; 
+  pointer-events: none;
 }
