--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -228,3 +228,154 @@ button{
   font-size: 2.0rem;
   padding:3px 8px;;
 }
+
+
+
+.beingdragged{
+  opacity:0.6;
+  display:none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.card-grid{
+  gap:20px;     
+  opacity:1;     
+  min-height:150px;
+  display:grid;
+  margin-bottom: 19px;
+  gap:15px;
+  grid-template-columns: repeat(12, minmax(70px, 1fr));
+  /* background:rgba(0, 0, 0, 0.116); */;
+  container-type: inline-size;
+  container-name: card-container;
+  
+
+}
+
+
+@container card-container (max-width: 1100px) {
+  .card-grid {
+      grid-template-columns: repeat(9, minmax(70px, 1fr));
+      
+  }
+}      
+
+@container card-container (max-width: 768px) {
+  .card-grid {
+      grid-template-columns: repeat(6, minmax(70px, 1fr));
+      
+  }
+}
+
+@container card-container (max-width: 600px) {
+  .card-grid {
+      grid-template-columns: repeat(3, minmax(70px, 1fr));
+      
+  }
+}
+
+
+.card-grid.list{
+  grid-template-columns: 190px 1fr auto;
+  gap:3px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* card grabber */
+
+
+.selected{
+  border:2px solid blueviolet !important;
+}
+
+.sortable-ghost{
+  /* border:2px solid teal; */
+  opacity:0.7 !important;
+  padding: 0px !important;
+  
+}
+.sortable-ghost-board{
+  opacity:0.7 !important;
+}
+
+.sortable-ghost{
+  grid-template-rows: auto;
+  grid-template-columns: subgrid;
+  gap:24px;
+  max-height: 83px;
+  max-width:100%;
+}
+
+.sortable-ghost .card-container---controls{
+  display:none !important;;
+}
+
+.sortable-ghost .thumb{
+  max-height: 100px;
+  overflow: hidden;
+}
+.sortable-ghost .updates{
+  max-height: 20px;
+}
+.sortable-ghost .date{
+  display: none;
+}
+.sortable-ghost .tags {
+  display:none;
+}
+
+
+
+/* .elementisbeingdragged {
+  border: 5px solid red !important;;
+} */
+
+.elementisbeingdragged .board-grid {
+  scroll-snap-type: unset !important;
+}
+
+
+
+
+
