--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -318,10 +318,6 @@ button{
 
 
 
-
-
-
-
 /* card grabber */
 
 
@@ -329,7 +325,7 @@ button{
   border:2px solid blueviolet !important;
 }
 
-.sortable-ghost{
+.sortable-ghost, .card.sortable-drag{
   /* border:2px solid teal; */
   opacity:0.7 !important;
   padding: 0px !important;
@@ -339,7 +335,7 @@ button{
   opacity:0.7 !important;
 }
 
-.sortable-ghost{
+.sortable-ghost, .card.sortable-drag{
   grid-template-rows: auto;
   grid-template-columns: subgrid;
   gap:24px;
@@ -347,21 +343,24 @@ button{
   max-width:100%;
 }
 
-.sortable-ghost .card-container---controls{
+.sortable-ghost .card-container---controls, .card.sortable-drag .card-container---controls{
   display:none !important;;
 }
 
-.sortable-ghost .thumb{
-  max-height: 100px;
+.sortable-ghost .thumb, .card.sortable-drag .thumb{
+  height: 100px;
   overflow: hidden;
 }
-.sortable-ghost .updates{
-  max-height: 20px;
+.sortable-ghost .updates, .card.sortable-drag .updates{
+  height: 20px;
 }
-.sortable-ghost .date{
+.card.sortable-drag .title, .sortable-ghost .title{
+  height: 20px;
+}
+.sortable-ghost .date, .card.sortable-drag .date{
   display: none;
 }
-.sortable-ghost .tags {
+.sortable-ghost .tags, .card.sortable-drag .tags {
   display:none;
 }
 
@@ -379,3 +378,19 @@ button{
 
 
 
+.card-grid{
+  overflow: hidden;
+} 
+
+
+
+@media (max-width:991px) {
+  .card.sortable-drag{
+    display:none !important
+  }
+}
+
+.sortable-ghost-board *{
+  opacity:0 !important;
+  
+}
