--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -169,7 +169,9 @@ button:disabled {
 }
 
 .milkdown img {
+  /* width: 100%; */
   max-width: 100%;
+  max-height: 500px;
 }
 
 .hidden {
@@ -441,8 +443,21 @@ button {
 .locked .grabber-board,
 .locked .editorOpentoggle,
 .locked .grabber,
-.locked .editor,
 .locked .cardcontrols-move,
-.locked .cardcontrols-delete {
+.locked .cardcontrols-delete,
+.locked .editor-controls {
   display: none !important;
+}
+
+.locked .milkdown .editor {
+  padding: 0px;
+}
+
+.locked .milkdown h1:first-child {
+  display: none;
+}
+
+.locked .milkdown .editor {
+  border: 1px solid transparent;
+  pointer-events: none;
 }
