--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -576,3 +576,7 @@ button {
 .milkdown ul {
   padding-inline-start: 20px;
 }
+
+milkdown-list-item-block .label-wrapper {
+  pointer-events: all;
+}
