tag search blocked on locked

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -580,3 +580,7 @@ button {
 milkdown-list-item-block .label-wrapper {
   pointer-events: all;
 }
+
+.locked .tags .tag {
+  pointer-events: none;
+}
