optimizations and bug fixes, single request for card move, sync fixed

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -581,6 +581,11 @@ milkdown-list-item-block .label-wrapper {
   pointer-events: all;
 }
 
+.debug {
+  display: none !important;
+  color: white;
+}
+
 .debug-id {
   background: teal;
   color: white;
