--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -170,8 +170,29 @@ button:disabled {
 }
 
 .milkdown .editor {
-  border: 1px solid var(--button-bg);
+  /* border: 1px solid var(--button-bg); */
   padding: 13px;
+  margin: 5px;
+  background: #0000001c;
+  border-radius: 4px;
+  box-shadow: inset 0 0 10px #00000013;
+  transition: all .3s;
+  font-size: 1.4rem;
+
+}
+
+.pxtone .milkdown .editor {
+  border: 1px solid var(--button-bg);
+}
+
+.milkdown .editor:focus {
+  background: #ffffff1c
+}
+
+.locked .editor:focus,
+.locked .editor {
+  background: #ffffff00;
+  box-shadow: inset 0 0 10px #00000000;
 }
 
 .milkdown img {
