--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -112,7 +112,7 @@ textarea {
   font-size: inherit;
   -webkit-padding: 0.4em 0;
   padding: 0.4em;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 1.3em 0;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -483,6 +483,17 @@ button {
 .locked .editor-controls {
   display: none !important;
 }
+
+.canmove .grabber-board,
+.canmove .editorOpentoggle,
+.canmove .grabber,
+.canmove .cardcontrols-move,
+.canmove .cardcontrols-delete,
+.canmove .editor-controls {
+  pointer-events: none;
+  opacity: 0.9;
+}
+
 
 .locked .milkdown .editor {
   padding: 0px;
