PICMO emoji picker

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -242,6 +242,17 @@ input::file-selector-button {
   height: 36px;
 }
 
+.workspacecard-container .boardemoji,
+.instance-box .board-header .boardemoji,
+.card.fullview .board-header .boardemoji,
+.checkbox-holder .boardemoji {
+  font-size: 33px !important;
+}
+
+.workspacepage .board-header .boardemoji {
+  font-size: 42px !important;
+}
+
 .workspacepage .board-header .img-c {
   width: 55px;
   height: 55px;
@@ -627,4 +638,30 @@ milkdown-list-item-block .label-wrapper {
   color: white;
   border-radius: 10px;
   padding: 0 10px;
+}
+
+
+.editor-incontainer .picmo {
+  right: 0;
+  bottom: 0;
+}
+
+.picmo * {
+  font-family: 'Spec';
+}
+
+.picmo__light,
+.picmo__auto {
+
+  --accent-color: var(--button-bg) !important;
+  background-color: var(--body-background) !important;
+}
+
+.emojibtn {
+  transition: all .3s
+}
+
+.locked .emojibtn {
+  opacity: 0;
+  pointer-events: none;
 }
