breadcrumb and duplicate cards

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -692,3 +692,38 @@ milkdown-list-item-block .label-wrapper {
 .label.monitor {
   cursor: pointer;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* breadcrumb */
+
+@media (min-width: 991px) {
+  .contextmenu-btn {
+    padding: 1px 13px;
+  }
+}
+
+.contextmenu-link {
+  color: var(--header-color);
+  opacity: 0.7;
+}
+
+.contextmenu-link a {
+  color: var(--header-color);
+}
+
+
+.breadcrumb {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
