--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -625,9 +625,13 @@ button {
 .calendarcard-container .card-grid.list {
   background: var(--container-bg);
   border: 4px solid var(--container-bg);
+  border-left: 0px;
 }
 
-
+.calendarcard-container .border-left {
+  right: 0px;
+  left: auto !important;
+}
 
 
 
@@ -784,4 +788,10 @@ milkdown-list-item-block .label-wrapper {
 
 .workspacepage .board-container .absolute.controls {
   display: none !important;
+}
+
+
+.calendar-result .board-header .img-c {
+  max-width: 29px;
+  max-height: 29px;
 }
