--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -807,4 +807,9 @@ milkdown-list-item-block .label-wrapper {
   z-index: 2;
   width: fit-content;
   font-size: 10px;
+  text-decoration: none;
+}
+
+.minibutton:hover {
+  text-decoration: none;
 }
