--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -813,3 +813,18 @@ milkdown-list-item-block .label-wrapper {
 .minibutton:hover {
   text-decoration: none;
 }
+
+blockquote {
+  background: var(--container-bg);
+  padding: 3px;
+  padding-left: 10px;
+  margin: 15px;
+}
+
+li[data-checked="true"]::before {
+  content: '☑ ';
+}
+
+li[data-checked="false"]::before {
+  content: '☐ ';
+}
