prosemirror testing phase and milkdown complete migration

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -886,3 +886,7 @@ li[data-checked="false"]::before {
 .boardpagecontainer {
   border-radius: 10px;
 }
+
+.tiptap.ProseMirror img {
+  max-width: 100%;
+}
