--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -310,10 +310,44 @@ button {
   display: none;
 }
 
+.tiptapcontrols {
+  margin-bottom: 10px;
+}
+
+.tiptapcontrols input[type="color"] {
+  border: 0px;
+  padding: 0px;
+  padding-block: 0px;
+  height: 26px;
+  width: 25px;
+}
 
 
+.tiptapcontrols button {
+  border-radius: 0px;
+  height: fit-content;
+  height: 25px;
+  min-width: 25px;
+}
 
+.tiptapcontrols .picmobutton {
+  border-radius: 10px 0 0 10px;
+}
 
+.tiptapcontrols .imgbutton {
+  border-radius: 0 10px 10px 0;
+}
+
+.tiptapcontrols .colortrigger {
+  border: 4px solid var(--button-bg);
+}
+
+emoji-picker {
+  position: absolute;
+  bottom: 25px;
+  z-index: 99;
+  max-height: calc(100vh - 190px)
+}
 
 
 
