--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -81,7 +81,7 @@ body {
 }
 
 html {
-  font-size: 10px;
+  font-size: 11px;
 }
 
 body {
@@ -89,7 +89,7 @@ body {
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
-  font: 1em/1.3 "Spec", "Helvetica";
+  font: 1rem/1.3 "Spec", "Helvetica";
 }
 
 * {
@@ -259,11 +259,11 @@ input::file-selector-button {
 .instance-box .board-header .boardemoji,
 .card.fullview .board-header .boardemoji,
 .checkbox-holder .boardemoji {
-  font-size: 33px !important;
+  font-size: 3.3rem !important;
 }
 
 .workspacepage .board-header .boardemoji {
-  font-size: 42px !important;
+  font-size: 4.2rem !important;
 }
 
 .workspacepage .board-header .img-c {
@@ -365,7 +365,7 @@ emoji-picker {
 
 .tiptap.ProseMirror p {
   margin: 5px;
-  font-size: 12px;
+  font-size: 1.2rem;
 }
 
 
@@ -545,7 +545,7 @@ emoji-picker {
 .contexttitle {
   display: flex;
   gap: 20px;
-  font-size: 15px;
+  font-size: 1.5rem;
   align-items: center;
 }
 
@@ -858,7 +858,7 @@ milkdown-list-item-block .label-wrapper {
   position: relative;
   z-index: 2;
   width: fit-content;
-  font-size: 10px;
+  font-size: 1rem;
   text-decoration: none;
 }
 
